    are documented.  This suppresses a false positive for libraries that add
    toplevel methods.  Pull Request #128 by Zachary Scott.
  * Fixed test_gen_url test name in TestRDocMarkupToHtml.  Pull Request #130
    by Zachary Scott.
  * Comment-defined methods ahead of define_method are now discovered.  Issue
    #133 by eclectic923

=== 3.12 / 2011-12-15

* Minor enhancements
  * Added DEVELOPERS document which contains an overview of how RDoc works and
    how to add new features to RDoc.
  * Improved title for HTML output to include <code>--title</code> in the
    title element.
  * <code>rdoc --pipe</code> now understands <code>--markup</code>.
  * RDoc now supports IRC-scheme hyperlinks.  Issue #83 by trans.

* Bug fixes
  * Fixed title on HTML output for pages.
  * Fixed parsing of non-indented HEREDOC.
  * Fixed parsing of <code>%w[]</code> and other % literals.  Issue #84 by
    Erik Hollensbe
  * Fixed arrow replacement in HTML output munging the spaceship operator.
    Issue #85 by eclectic923.
  * Verbatim sections with ERB that match the ruby code whitelist are no
    longer syntax-highlighted.  Issue #86 by eclectic923
  * Line endings on windows are normalized immediately after reading with
    binmode.  Issue #87 by Usa Nakamura
  * RDoc better understands directives for comments.  Comment directives can
    now be found anywhere in multi-line comments.  Issue #90 by Ryan Davis
  * Tidy links to methods show the label again.  Issue #88 by Simon Chiang
  * RDoc::Parser::C can now find comments directly above
    +rb_define_class_under+.  Issue #89 by Enrico
  * In rdoc, backspace and ansi formatters, labels and notes without bodies
    are now shown.
  * In rdoc, backspace and ansi formatters, whitespace between label or note
    and the colon is now stripped.

=== 3.11 / 2011-10-17

* Bug fixes
  * Avoid parsing TAGS files included in gems.  Issue #81 by Santiago
    Pastorino.

=== 3.10 / 2011-10-08

* Major enhancements